Fixed logo overflow issue on mobile

--- a/assets/css/frontpage.scss
+++ b/assets/css/frontpage.scss
@@ -396,6 +396,9 @@ footer {
     a.sitelink {
         font-size: 1rem;
     }
+    .logo {
+        max-width: 90%;
+    }
 
     .project .project-title {
         padding: 0 1.5em;
